# ai_tutor_for_github_repositories

./: .gitignore  .pre-commit-config.yaml  AGENT_OPTIMIZATIONS.md  ARCHITECTURE_IMPROVEMENTS.md  AUTH_403_FIX.md  BACKEND_AUDIT_REPORT.md  CI_CD_ANALYSIS.md  CI_CD_SETUP_COMPLETE.md  DEBUGGING_LOGS.md  DEBUG_VERTEX_AI.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  Dockerfile.roadmap  EMBEDDING_MODEL_FIX.md  FIXES_SUMMARY.md  FIX_VERTEX_AI_LOCATION.md  GCP_DEPLOYMENT.md  GCP_HTTPS_SETUP.md  LANGGRAPH_MIGRATION_SUMMARY.md  LOAD_BALANCER_STATUS.md  LOCAL_DEVELOPMENT.md  LOCAL_SETUP_SUMMARY.md  MIGRATION_TEST_REPORT.md  PREVIEW_PROXY_SETUP.md  RATE_LIMIT_FIX.md  README.md  ROADMAP_DEBUGGING_GUIDE.md  SETUP_PREVIEW_PROXY.md  SETUP_REDIS.md  SETUP_VERTEX_AI.md  TEST_REPORT.md  UPDATE_ENV_FOR_GEMINI_EMBEDDING.md  docker-compose.override.yml.example  docker-compose.yml  main.py  nginx-preview-proxy.conf.example  pyproject.toml  run.bat  (+2 more)
.github/scripts/: README.md  disable-cloud-build-triggers.sh
.github/workflows/: deploy.yml  rollback.yml
app/: __init__.py  config.py  main.py  roadmap_service.py  workspace_service.py
app/agents/: __init__.py  day0.py  models.py  prompts.py  pydantic_models.py  roadmap_agent.py  state.py  utils.py
app/api/: __init__.py  chatbot.py  files.py  git.py  github_consent.py  preview.py  progress.py  project_chunks_embeddings.py  projects.py  roadmap.py  routes.py  task_chatbot.py  task_sessions.py  task_verification.py  terminal.py  users.py  workspaces.py
app/core/: __init__.py  database.py  qdrant_client.py  startup.py  supabase_client.py
app/models/: __init__.py
app/services/: __init__.py  ast_analyzer.py  azure_openai_service.py  chunk_storage.py  docker_client.py  embedding_pipeline.py  embedding_service.py  external_commit_service.py  file_system.py  gemini_service.py  git_service.py  github_evidence.py  github_service.py  github_tools.py  groq_service.py  json_sanitizer.py  llm_verifier.py  pattern_extractor.py  pattern_matcher.py  preview_proxy.py  qdrant_service.py  rag_pipeline.py  rag_service.py  rate_limiter.py  roadmap_client.py  roadmap_generation.py  task_chatbot_context.py  task_session_service.py  task_validation.py  terminal_service.py  test_executor.py  verification_agent.py  verification_evidence.py  verification_pipeline.py  workspace_manager.py
app/utils/: __init__.py  clerk_auth.py  db_helpers.py  github_utils.py  (+6 more)
docker/: .dockerignore  Dockerfile.workspace
graph_visualizations/: roadmap_graph.mmd  roadmap_graph.txt
migrations/: add_chat_rls_policies.sql  add_day0_ready_status.sql  add_updated_at_to_tasks.sql  chat_conversations_allow_multiple.sql
scripts/: cleanup_all_workspaces.py  create_workspace_vm.ps1  create_workspace_vm.sh  dev-local.bat  dev-local.sh  fix-env-for-docker-compose.py  fix-env-for-docker.ps1  fix-env-for-docker.sh  fix-env.py  fix-ssh-key-in-env.py  gitguide-workspaces.service  setup_workspace_vm.sh  start-docker-and-compose.ps1  startup.sh  test_azure_openai_connection.py  visualize_graph.py  vm-set-preview-env.sh
tests/: __init__.py  conftest.py  test_agent_robustness.py  test_api_routes.py  test_ast_analyzer.py  test_chatbot_rag_api.py  test_chunk_storage.py  test_embedding_pipeline.py  test_embedding_service.py  test_git_api.py  test_github_evidence.py  test_github_info_pipeline.py  test_github_service.py  test_groq_service.py  test_langgraph_migration_e2e.py  test_llm_verifier.py  test_pattern_extractor.py  test_pattern_matcher.py  test_phase1_terminal.py  test_project_chunks_embeddings_api.py  test_projects_api.py  test_qdrant_service.py  test_rag_pipeline.py  test_repo_context.py  test_roadmap_e2e.py  test_task_sessions_api.py  test_task_verification_api.py  test_test_executor.py  test_users_api.py  test_utils.py  test_verification_evidence.py
(+36 files in other folders)
