[project]
name = "ai-tutor-for-github-repositories"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyjwt>=2.8.0",
    "qdrant-client>=1.16.2",
    "tiktoken>=0.12.0",
    "sentence-transformers>=2.2.0",
    "groq>=1.0.0",
    "langgraph>=1.0.5",
    "langchain>=1.2.0",
    "langchain-core>=1.2.5",
    "redis>=5.0.0",
    "tenacity>=8.2.0",
    "docker>=7.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
] 

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:google.protobuf.internal.well_known_types",
    "ignore::FutureWarning:keras.src.export.tf2onnx_lib",
]


